--- a/project-X/login.css
+++ b/project-X/login.css
@@ -243,3 +243,9 @@ body{
     margin-top: 20px;
     text-align: center;
   }
+  .input-control #error {
+    color: red;
+    font-size: 9px;
+    height:13px;
+    padding-left: 30px;
+  }
