--- a/project-X/register.css
+++ b/project-X/register.css
@@ -128,7 +128,7 @@ body{
     left: 16px;
     color: #ffffff;
 }
-.Fname ,.Lname ,.Email ,.password,.date{
+.Fname ,.Lname ,.Email ,.password,.password2,.date{
     position: relative;
     height: 76px;
     max-height: 76px;
@@ -243,3 +243,12 @@ body{
     margin-top: 20px;
     text-align: center;
   }
+
+  .input-control #error {
+    color: red;
+    font-size: 9px;
+    height:13px;
+    padding-left: 30px;
+  }
+
+
