--- a/project-X/index.css
+++ b/project-X/index.css
@@ -8,7 +8,7 @@ body{
     width: 100%;
     height: 60px;
     border: none;
-    background: linear-gradient(180deg,rgba(0, 0, 0, 0.949) .98%,rgba(0,0,0,.4) 59.23%,rgba(0,0,0,.2) 78.16%,rgba(0,0,0,.0001) 96.12%);
+    background-color: #000000;
     color: white;
     position: relative;
     
@@ -48,16 +48,28 @@ body{
     color: orangered;
 }
 .profile-container{
-    flex: 2;
+    flex: 3;
     display: flexbox;
-    padding-left: 10%;
+    padding-left: 10px;
+    
 }
-/* .profile-pictuer{
+.profile{
+    display: inline-flex;
+    position: absolute;
+    margin-left: 10px;
+}
+.pro-img{
     width: 32px;
     height: 32px;
     border-radius: 50%;
     object-fit: cover;
-} */
+    background-color: white;
+}
+.pro-name{
+    padding-left: 20px;
+    padding-top: 5px;
+        
+}
 .reg{
     font-family: 'Sen', sans-serif;
     font-weight: bold;
