--- a/project-X/Watch.css
+++ b/project-X/Watch.css
@@ -9,7 +9,7 @@ body{
     width: 100%;
     height: 60px;
     border: none;
-    background: black;
+    background-color: #000000;
     color: white;
     position: relative;
     
@@ -37,6 +37,10 @@ body{
     display: flex;
     list-style: none;
 }
+.menu-list a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
 .menu-list-item{
     margin-right: 30px;
     cursor: pointer;
@@ -44,21 +48,38 @@ body{
 .menu-list-item:hover{
     color: orangered;
 }
-.menu-list-item.active{
+.menu-list-item.active a{
     font-weight:bolder;
     color: orangered;
 }
 .profile-container{
-    flex: 2;
+    flex: 3;
     display: flexbox;
-    padding-left: 10%;
+    padding-left: 10px;
+    
 }
-/* .profile-pictuer{
+.profile{
+    display: inline-flex;
+    position: relative;
+    margin-left: 200px;
+    margin-top: 0px;
+}
+.pro-img{
     width: 32px;
     height: 32px;
     border-radius: 50%;
     object-fit: cover;
-} */
+    background-color: white;
+}
+.pro-name{
+    padding-left: 20px;
+    padding-top: 5px;
+    text-decoration: none;
+}
+.pro-name a{
+    color: #fcfafa;
+    text-decoration: none;
+}
 .reg{
     font-family: 'Sen', sans-serif;
     font-weight: bold;
@@ -167,6 +188,7 @@ body{
     background-color: tomato;
 }
 .frame-1{
+    border: none;
     width: 193vh;
     height: 100vh;
 }
