--- a/project-X/index.css
+++ b/project-X/index.css
@@ -36,14 +36,18 @@ body{
     display: flex;
     list-style: none;
 }
+.menu-list a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
 .menu-list-item{
     margin-right: 30px;
     cursor: pointer;
 }
-.menu-list-item:hover{
+.menu-list-item:hover a{
     color: orangered;
 }
-.menu-list-item.active{
+.menu-list-item.active a{
     font-weight:bolder;
     color: orangered;
 }
@@ -55,8 +59,9 @@ body{
 }
 .profile{
     display: inline-flex;
-    position: absolute;
-    margin-left: 10px;
+    position: relative;
+    margin-left: 200px;
+    margin-top: 0px;
 }
 .pro-img{
     width: 32px;
@@ -68,7 +73,11 @@ body{
 .pro-name{
     padding-left: 20px;
     padding-top: 5px;
-        
+    text-decoration: none;
+}
+.pro-name a{
+    color: #fcfafa;
+    text-decoration: none;
 }
 .reg{
     font-family: 'Sen', sans-serif;
@@ -79,7 +88,7 @@ body{
     border-radius: 50px;
     cursor: pointer;
 }
-.reg:hover{
+/* .reg:hover{
     background-color: orangered;
     color: rgb(255, 255, 255);
     
@@ -97,8 +106,8 @@ body{
 }
 .sign-in:hover{
     color: white;
-}
-.sidebar{
+} */
+/* .sidebar{
     width: 50px;
     height: 1000px;
     background-color: black;
@@ -118,19 +127,23 @@ body{
 }
 .left-menu-icon:hover{
     color: orangered;
-}
+} */
 .featuerd-movie{
     padding-left: 80px;
 }
 .featured-title {
-    width: 200px;
-    margin-top: 130px;
+    font-family: 'Sen', sans-serif;
+    font-weight: bold;
+    font-size: 90px;
+    margin-top: 120px;
   }
   
   .featured-desc {
+    font-family: 'Sen', sans-serif;
+    font-weight: bold;
     width: 500px;
     color: lightgray;
-    margin: 30px 0;
+    margin-top: 30px;
   }
   
   .featured-button {
@@ -141,7 +154,12 @@ body{
     border: none;
     outline: none;
     font-weight: bold;
+    margin-top: 20px;
     cursor: pointer;
+  }
+  .featured-button a{
+    color: #fcfafa;
+    text-decoration: none;
   }
 .main{
     background-color: #181818;
@@ -149,7 +167,7 @@ body{
     color: white;
 }
 .content-main{
-    margin-left: 50px;
+    margin-left: 0px;
 }
 .featuerd-movie{
     height: 70vh;
@@ -207,6 +225,8 @@ body{
     transition: 1s all ease-in-out;
   }
   .movie-list-item-desc {
+    font-family: 'Sen', sans-serif;
+    font-weight: bold;
     padding: 10px;
     font-size: 14px;
     position: absolute;
@@ -225,7 +245,7 @@ body{
     border: none;
     cursor: pointer;
     position: absolute;
-    bottom: 150px;
+    bottom: 100px;
     left: 50px;
     opacity: 0;
     transition: 1s all ease-in-out;
@@ -235,6 +255,10 @@ body{
     width: 130px;
     border: 10px;
     border-radius: 10px;
+  }
+  .movie-list-item-button a{
+    color: #fcfafa;
+    text-decoration: none;
   }
 .arrow{
     font-size: 120px; 
@@ -317,6 +341,44 @@ body{
     margin-top: 20px;
     text-align: center;
   }
+  .dropdown{
+    visibility: hidden;
+  }
+  .dropbtn {
+    background-color: #000000;
+    color: white;
+    padding: 16px;
+    font-size: 26px;
+    border: none;
+    border-radius: 5px;
+    margin-left: 1235px;
+    margin-top: 10px;
+  }
+.drop_down{
+    list-style: none;
+    display: none;
+    position: absolute;
+    background-color: #00000077;
+    width: 130px;
+    text-align: center;
+    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+    margin-left: 1200px;
+    margin-top: 10px;
+    padding-left: 0px;
+    border-radius: 10px;
+}
+.drop_down a {
+    font-family: 'Sen', sans-serif;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    padding: 12px 12px;
+    text-decoration: none;
+    display: block;
+    margin-top: 5px;
+  }
+.drop_down a:hover {background-color: #ff000072;}
+.dropdown:hover .drop_down {display: block;}
+.dropdown:hover .dropbtn {background-color: #242424;}
 @media(min-width: 469px) and (max-width: 769px){
     .menu-container{
         display: none;
@@ -329,20 +391,28 @@ body{
         padding-left: 18%;
     }
     .reg{
-        padding: 9px;
-        width: 100px;
-        border: 10px;
-        border-radius: 50px;
-        cursor: pointer;
+        display: none;
     }
     .sign-in{
-        padding: 9px;
-        width: 100px;
-        border: 10px;
-        border-radius: 50px;
-        color: orangered;
-        background-color: rgb(0, 0, 0);
-        cursor: pointer;
+        display: none;
+    }
+    .profile{
+        display: inline-flex;
+        position: relative;
+        margin-left: 70px;
+        margin-top: 0px;
+    }
+    .pro-img{
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        object-fit: cover;
+        background-color: white;
+    }
+    .pro-name{
+        padding-left: 20px;
+        padding-top: 5px;
+            
     }
     .sidebar{
         display: none;
@@ -352,9 +422,21 @@ body{
     }
     .featuerd-movie{
         height: 70vh;
-        width: 480px;
+        width: 400px;
         /* object-fit: cover; */
         background: linear-gradient(to bottom, rgba(0,0,0,0),#151515),url('jw.jpg');
     }
-    
+    .dropdown{
+        visibility: visible;
+    }
+    .dropbtn{
+        margin-left: 340px;
+    }
+    .drop_down {
+        margin-left: 290px;
+    }
+    .footer-clean {
+        padding:50px;
+        padding-left: 60px;
+      }
 }
