--- a/project-X/profile.css
+++ b/project-X/profile.css
@@ -10,7 +10,6 @@ body{
     height:13px;
     padding-left: 30px;
 }
-
 .profile-container{
     width: 29%;
     height: 100vh;
@@ -54,6 +53,7 @@ body{
     margin-left: 100px;
     color: whitesmoke;
 }
+
 .pro-list ul{
     width: 300px;
     list-style-type: none;
@@ -84,6 +84,7 @@ body{
     background-color: brown;
     position: relative;
     margin-left: 440px;
+    display: block;
 }
 .infoo{
     font-family: 'Sen', sans-serif;
@@ -142,6 +143,10 @@ body{
 .submit-container:hover{
     background-image: linear-gradient(to bottom, rgba(144, 47, 2, 0.971),rgb(243, 74, 7));
 }
+
+
+
+
 .profile_container_x{
     width: 72%;
     height: 100vh;
@@ -150,7 +155,7 @@ body{
     margin-left: 440px;
     padding-left: 30px;
     padding-top: 40px;
-    visibility: hidden;
+    display: none;
 }
 .plan_tile_1{
     width: 45vh;
@@ -271,6 +276,7 @@ body{
     background-color: rgb(23, 243, 23);
     cursor: pointer;
 }
+
 #pro__name{
     padding-bottom: 50px;
     font-family: 'Sen', sans-serif;
@@ -299,6 +305,9 @@ body{
     color:beige;
 }
 
+
+
+
 .profile_container_y{
     width: 72%;
     height: 100vh;
@@ -307,7 +316,7 @@ body{
     margin-left: 440px;
     padding-left: 30px;
     padding-top: 40px;
-    visibility: hidden;
+    display: none;
 }
 .plan_tile_1_{
     width: 45vh;
